instruction and alert have the correct font size as well as are aligned

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -16,7 +16,7 @@ body {
 
 #instruction, #alerts {
 	text-align: center;
-	font-size: 10px;
+	font-size: 12px;
 }
 
 #main-content {
